--- a/input.css
+++ b/input.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities{
+    .body-text{
+      @apply  font-Quantico text-black text-base leading-6
+    }
+}
