--- a/output.css
+++ b/output.css
@@ -660,6 +660,10 @@ video {
   max-width: 570px;
 }
 
+.max-w-full {
+  max-width: 100%;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -748,6 +752,10 @@ video {
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -803,6 +811,10 @@ video {
 
 .pt-\[25px\] {
   padding-top: 25px;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .text-center {
@@ -919,6 +931,10 @@ video {
 
   .md\:h-\[40px\] {
     height: 40px;
+  }
+
+  .md\:max-w-\[570px\] {
+    max-width: 570px;
   }
 
   .md\:grid-cols-2 {
