--- a/output.css
+++ b/output.css
@@ -558,6 +558,22 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
 .mx-\[25px\] {
   margin-left: 25px;
   margin-right: 25px;
@@ -574,10 +590,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
 }
 
 .mt-10 {
@@ -618,8 +630,12 @@ video {
   height: 250px;
 }
 
-.h-\[50px\] {
-  height: 50px;
+.h-\[75px\] {
+  height: 75px;
+}
+
+.h-\[660px\] {
+  height: 660px;
 }
 
 .w-\[25px\] {
@@ -640,28 +656,36 @@ video {
   width: 47px;
 }
 
-.w-\[150px\] {
-  width: 150px;
+.w-\[75px\] {
+  width: 75px;
+}
+
+.w-\[550px\] {
+  width: 550px;
 }
 
 .max-w-\[400px\] {
   max-width: 400px;
 }
 
-.max-w-\[520px\] {
-  max-width: 520px;
-}
-
-.max-w-\[250px\] {
-  max-width: 250px;
-}
-
-.max-w-\[570px\] {
-  max-width: 570px;
-}
-
 .max-w-full {
   max-width: 100%;
+}
+
+.max-w-\[inherit\] {
+  max-width: inherit;
+}
+
+.max-w-\[884px\] {
+  max-width: 884px;
+}
+
+.max-w-\[479px\] {
+  max-width: 479px;
+}
+
+.max-w-\[320px\] {
+  max-width: 320px;
 }
 
 .grid-cols-1 {
@@ -674,6 +698,14 @@ video {
 
 .place-items-center {
   place-items: center;
+}
+
+.items-start {
+  align-items: flex-start;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -740,16 +772,20 @@ video {
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
-.space-x-5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+.space-y-\[96px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(96px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(96px * var(--tw-space-y-reverse));
 }
 
-.space-y-5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+.space-x-0 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0px * var(--tw-space-x-reverse));
+  margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-y-hidden {
@@ -762,6 +798,10 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .bg-LightBlue {
@@ -901,6 +941,11 @@ video {
     margin-right: 50px;
   }
 
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .md\:block {
     display: block;
   }
@@ -913,28 +958,40 @@ video {
     display: none;
   }
 
-  .md\:h-\[150px\] {
-    height: 150px;
-  }
-
-  .md\:h-\[80px\] {
-    height: 80px;
-  }
-
   .md\:h-\[60px\] {
     height: 60px;
-  }
-
-  .md\:h-\[20px\] {
-    height: 20px;
   }
 
   .md\:h-\[40px\] {
     height: 40px;
   }
 
+  .md\:h-\[80px\] {
+    height: 80px;
+  }
+
+  .md\:h-\[660px\] {
+    height: 660px;
+  }
+
   .md\:max-w-\[570px\] {
     max-width: 570px;
+  }
+
+  .md\:max-w-\[360px\] {
+    max-width: 360px;
+  }
+
+  .md\:max-w-\[884px\] {
+    max-width: 884px;
+  }
+
+  .md\:max-w-\[250px\] {
+    max-width: 250px;
+  }
+
+  .md\:max-w-full {
+    max-width: 100%;
   }
 
   .md\:grid-cols-2 {
@@ -961,9 +1018,19 @@ video {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
+  .md\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .md\:text-left {
+    text-align: left;
   }
 
   .md\:text-3xl {
@@ -983,6 +1050,26 @@ video {
     margin-right: 50px;
   }
 
+  .lg\:h-\[660px\] {
+    height: 660px;
+  }
+
+  .lg\:h-\[550px\] {
+    height: 550px;
+  }
+
+  .lg\:h-\[600px\] {
+    height: 600px;
+  }
+
+  .lg\:w-\[550px\] {
+    width: 550px;
+  }
+
+  .lg\:w-\[530px\] {
+    width: 530px;
+  }
+
   .lg\:max-w-\[575px\] {
     max-width: 575px;
   }
@@ -991,8 +1078,32 @@ video {
     max-width: 420px;
   }
 
+  .lg\:max-w-\[400px\] {
+    max-width: 400px;
+  }
+
+  .lg\:max-w-\[550px\] {
+    max-width: 550px;
+  }
+
+  .lg\:max-w-\[650px\] {
+    max-width: 650px;
+  }
+
+  .lg\:max-w-\[870px\] {
+    max-width: 870px;
+  }
+
+  .lg\:max-w-\[479px\] {
+    max-width: 479px;
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
   }
 
   .lg\:px-\[50px\] {
