--- a/output.css
+++ b/output.css
@@ -981,6 +981,10 @@ video {
     height: 660px;
   }
 
+  .md\:w-\[200px\] {
+    width: 200px;
+  }
+
   .md\:max-w-\[570px\] {
     max-width: 570px;
   }
@@ -1067,6 +1071,10 @@ video {
 
   .lg\:w-\[530px\] {
     width: 530px;
+  }
+
+  .lg\:w-auto {
+    width: auto;
   }
 
   .lg\:max-w-\[575px\] {
