--- a/output.css
+++ b/output.css
@@ -558,6 +558,40 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 .absolute {
   position: absolute;
 }
@@ -566,12 +600,12 @@ video {
   position: relative;
 }
 
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
 .top-0 {
   top: 0px;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
 }
 
 .left-0 {
@@ -608,6 +642,10 @@ video {
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
+}
+
+.mt-\[40px\] {
+  margin-top: 40px;
 }
 
 .mt-\[75px\] {
@@ -662,10 +700,18 @@ video {
   height: 0.25rem;
 }
 
+.h-\[60vh\] {
+  height: 60vh;
+}
+
 .h-fit {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .h-full {
@@ -676,8 +722,8 @@ video {
   height: 75px;
 }
 
-.h-\[360px\] {
-  height: 360px;
+.h-\[445px\] {
+  height: 445px;
 }
 
 .h-10 {
@@ -692,10 +738,12 @@ video {
   width: 100%;
 }
 
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+.w-screen {
+  width: 100vw;
+}
+
+.w-\[70\%\] {
+  width: 70%;
 }
 
 .w-\[47px\] {
@@ -714,16 +762,8 @@ video {
   width: 305px;
 }
 
-.w-\[50M\] {
-  width: 50M;
-}
-
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-\[80\%\] {
-  width: 80%;
+.max-w-\[300px\] {
+  max-width: 300px;
 }
 
 .max-w-\[400px\] {
@@ -738,16 +778,8 @@ video {
   max-width: 24rem;
 }
 
-.max-w-md {
-  max-width: 28rem;
-}
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -870,18 +902,6 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.space-x-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
@@ -890,32 +910,12 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
-}
-
-.border-t-0 {
-  border-top-width: 0px;
-}
-
-.border-l-0 {
-  border-left-width: 0px;
-}
-
-.border-r-0 {
-  border-right-width: 0px;
 }
 
 .border-gray-300 {
@@ -923,30 +923,46 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.border-LightBlue {
-  --tw-border-opacity: 1;
-  border-color: rgb(19 93 255 / var(--tw-border-opacity));
-}
-
 .bg-LightBlue {
   --tw-bg-opacity: 1;
   background-color: rgb(19 93 255 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-profiel-group {
+  background-image: url('images/cantranscam-team.jpg') ;
 }
 
 .bg-world-map {
   background-image: url('images/world map.png') ;
 }
 
+.bg-profile-DG {
+  background-image: url('images/DG.jpg') ;
+}
+
 .bg-profile-1 {
-  background-image: url('images/profile1.png') ;
+  background-image: url('images/profile1.jpg') ;
 }
 
 .bg-profile-2 {
-  background-image: url('images/profile2.png') ;
+  background-image: url('images/profile2.jpg') ;
 }
 
 .bg-profile-3 {
-  background-image: url('images/profile3.png') ;
+  background-image: url('images/profile3.jpg') ;
+}
+
+.bg-profile-mag {
+  background-image: url('images/profile-mag.png') ;
+}
+
+.bg-profile-5 {
+  background-image: url('images/profile5.jpg') ;
 }
 
 .bg-cover {
@@ -957,8 +973,16 @@ video {
   background-attachment: fixed;
 }
 
+.bg-top {
+  background-position: top;
+}
+
 .bg-center {
   background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .p-1 {
@@ -974,29 +998,9 @@ video {
   padding-right: 25px;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.px-\[9px\] {
-  padding-left: 9px;
-  padding-right: 9px;
-}
-
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 
 .px-5 {
@@ -1004,8 +1008,17 @@ video {
   padding-right: 1.25rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .pt-\[25px\] {
   padding-top: 25px;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .pb-5 {
@@ -1105,21 +1118,6 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
@@ -1128,6 +1126,11 @@ video {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-rose-600 {
@@ -1145,11 +1148,6 @@ video {
 
 .placeholder-transparent::placeholder {
   color: transparent;
-}
-
-.ring-LightBlue {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(19 93 255 / var(--tw-ring-opacity));
 }
 
 .transition-all {
@@ -1178,9 +1176,9 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.hover\:bg-yellow-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+.hover\:text-LightBlue:hover {
+  --tw-text-opacity: 1;
+  color: rgb(19 93 255 / var(--tw-text-opacity));
 }
 
 .focus\:border-LightBlue:focus {
@@ -1191,16 +1189,6 @@ video {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.focus\:ring-fuchsia-900:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(112 26 117 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-LightBlue:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(19 93 255 / var(--tw-ring-opacity));
 }
 
 .group:hover .group-hover\:mt-2 {
@@ -1324,10 +1312,6 @@ video {
     max-width: 100%;
   }
 
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1338,10 +1322,6 @@ video {
 
   .md\:items-center {
     align-items: center;
-  }
-
-  .md\:justify-between {
-    justify-content: space-between;
   }
 
   .md\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
@@ -1411,18 +1391,6 @@ video {
     width: 530px;
   }
 
-  .lg\:w-\[309px\] {
-    width: 309px;
-  }
-
-  .lg\:w-\[600px\] {
-    width: 600px;
-  }
-
-  .lg\:w-\[650px\] {
-    width: 650px;
-  }
-
   .lg\:max-w-\[575px\] {
     max-width: 575px;
   }
@@ -1447,20 +1415,12 @@ video {
     max-width: 650px;
   }
 
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .lg\:flex-row {
     flex-direction: row;
   }
 
   .lg\:justify-start {
     justify-content: flex-start;
-  }
-
-  .lg\:justify-between {
-    justify-content: space-between;
   }
 
   .lg\:px-\[50px\] {
