--- a/output.css
+++ b/output.css
@@ -604,12 +604,20 @@ video {
   top: 0px;
 }
 
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
 .left-0 {
   left: 0px;
+}
+
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
 }
 
 .-top-3\.5 {
@@ -650,6 +658,10 @@ video {
 
 .mt-\[75px\] {
   margin-top: 75px;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
 .mt-8 {
@@ -704,6 +716,10 @@ video {
   height: 60vh;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .h-fit {
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -714,8 +730,8 @@ video {
   height: 100vh;
 }
 
-.h-full {
-  height: 100%;
+.h-\[300px\] {
+  height: 300px;
 }
 
 .h-\[75px\] {
@@ -728,6 +744,24 @@ video {
 
 .h-10 {
   height: 2.5rem;
+}
+
+.h-max {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
+.h-\[350px\] {
+  height: 350px;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .w-\[25px\] {
@@ -766,6 +800,10 @@ video {
   max-width: 300px;
 }
 
+.max-w-md {
+  max-width: 28rem;
+}
+
 .max-w-\[400px\] {
   max-width: 400px;
 }
@@ -780,6 +818,10 @@ video {
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -836,10 +878,10 @@ video {
   margin-bottom: calc(0px * var(--tw-space-y-reverse));
 }
 
-.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -858,12 +900,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
 .space-y-\[96px\] > :not([hidden]) ~ :not([hidden]) {
@@ -965,6 +1001,10 @@ video {
   background-image: url('images/profile5.jpg') ;
 }
 
+.bg-truck {
+  background-image: url('images/truck.png') ;
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -1046,14 +1086,19 @@ video {
   line-height: 1.75rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-4xl {
@@ -1081,17 +1126,16 @@ video {
   line-height: 1;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
 
 .font-thin {
   font-weight: 100;
+}
+
+.leading-4 {
+  line-height: 1rem;
 }
 
 .leading-6 {
@@ -1156,12 +1200,12 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-200 {
-  transition-duration: 200ms;
-}
-
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
 }
 
 .ease-linear {
@@ -1284,6 +1328,10 @@ video {
     height: 660px;
   }
 
+  .md\:h-\[350px\] {
+    height: 350px;
+  }
+
   .md\:w-\[200px\] {
     width: 200px;
   }
@@ -1324,12 +1372,6 @@ video {
     align-items: center;
   }
 
-  .md\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(0px * var(--tw-space-x-reverse));
-    margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
-  }
-
   .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
@@ -1357,14 +1399,14 @@ video {
     text-align: center;
   }
 
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
@@ -1372,6 +1414,11 @@ video {
   .lg\:mx-\[50px\] {
     margin-left: 50px;
     margin-right: 50px;
+  }
+
+  .lg\:mx-\[25px\] {
+    margin-left: 25px;
+    margin-right: 25px;
   }
 
   .lg\:mx-0 {
@@ -1389,10 +1436,6 @@ video {
 
   .lg\:w-\[530px\] {
     width: 530px;
-  }
-
-  .lg\:max-w-\[575px\] {
-    max-width: 575px;
   }
 
   .lg\:max-w-\[420px\] {
@@ -1415,12 +1458,20 @@ video {
     max-width: 650px;
   }
 
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
 
   .lg\:justify-start {
     justify-content: flex-start;
+  }
+
+  .lg\:rounded-full {
+    border-radius: 9999px;
   }
 
   .lg\:px-\[50px\] {
@@ -1432,17 +1483,13 @@ video {
     text-align: left;
   }
 
-  .lg\:text-5xl {
-    font-size: 3rem;
+  .lg\:text-6xl {
+    font-size: 3.75rem;
     line-height: 1;
   }
 
   .lg\:text-4xl {
     font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .lg\:leading-10 {
     line-height: 2.5rem;
   }
 
