--- a/output.css
+++ b/output.css
@@ -592,6 +592,10 @@ video {
   }
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 .absolute {
   position: absolute;
 }
@@ -628,6 +632,14 @@ video {
   top: -0.75rem;
 }
 
+.right-0 {
+  right: 0px;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -662,6 +674,10 @@ video {
 
 .mb-20 {
   margin-bottom: 5rem;
+}
+
+.mt-\[20px\] {
+  margin-top: 20px;
 }
 
 .mt-8 {
@@ -708,6 +724,10 @@ video {
   height: 100px;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .h-1 {
   height: 0.25rem;
 }
@@ -726,12 +746,8 @@ video {
   height: fit-content;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.h-\[300px\] {
-  height: 300px;
+.h-auto {
+  height: auto;
 }
 
 .h-\[75px\] {
@@ -746,30 +762,12 @@ video {
   height: 2.5rem;
 }
 
-.h-max {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-}
-
-.h-\[80vh\] {
-  height: 80vh;
-}
-
-.h-\[350px\] {
-  height: 350px;
-}
-
-.h-auto {
-  height: auto;
+.w-full {
+  width: 100%;
 }
 
 .w-\[25px\] {
   width: 25px;
-}
-
-.w-full {
-  width: 100%;
 }
 
 .w-screen {
@@ -812,12 +810,13 @@ video {
   max-width: 100%;
 }
 
-.max-w-sm {
-  max-width: 24rem;
+.max-w-xs {
+  max-width: 20rem;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.translate-y-\[-1000px\] {
+  --tw-translate-y: -1000px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .grid-cols-1 {
@@ -860,10 +859,10 @@ video {
   gap: 1.25rem;
 }
 
-.space-x-\[30px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(30px * var(--tw-space-x-reverse));
-  margin-left: calc(30px * calc(1 - var(--tw-space-x-reverse)));
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .space-y-0\.5 > :not([hidden]) ~ :not([hidden]) {
@@ -902,10 +901,10 @@ video {
   margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
 }
 
-.space-y-\[96px\] > :not([hidden]) ~ :not([hidden]) {
+.space-y-\[46px\] > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(96px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(96px * var(--tw-space-y-reverse));
+  margin-top: calc(46px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(46px * var(--tw-space-y-reverse));
 }
 
 .space-x-0 > :not([hidden]) ~ :not([hidden]) {
@@ -1001,8 +1000,8 @@ video {
   background-image: url('images/profile5.jpg') ;
 }
 
-.bg-truck {
-  background-image: url('images/truck.png') ;
+.bg-profile-comp {
+  background-image: url('images/profile-comp.png') ;
 }
 
 .bg-cover {
@@ -1086,6 +1085,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1118,11 +1122,6 @@ video {
 
 .text-6xl {
   font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-5xl {
-  font-size: 3rem;
   line-height: 1;
 }
 
@@ -1220,6 +1219,11 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.hover\:bg-blue-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
 .hover\:text-LightBlue:hover {
   --tw-text-opacity: 1;
   color: rgb(19 93 255 / var(--tw-text-opacity));
@@ -1312,24 +1316,20 @@ video {
     margin-right: 0px;
   }
 
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
   .md\:block {
     display: block;
   }
 
-  .md\:flex {
-    display: flex;
-  }
-
-  .md\:hidden {
-    display: none;
+  .md\:h-\[350px\] {
+    height: 350px;
   }
 
   .md\:h-\[660px\] {
     height: 660px;
-  }
-
-  .md\:h-\[350px\] {
-    height: 350px;
   }
 
   .md\:w-\[200px\] {
@@ -1342,6 +1342,10 @@ video {
 
   .md\:w-\[80\%\] {
     width: 80%;
+  }
+
+  .md\:max-w-xs {
+    max-width: 20rem;
   }
 
   .md\:max-w-\[570px\] {
@@ -1360,6 +1364,14 @@ video {
     max-width: 100%;
   }
 
+  .md\:max-w-sm {
+    max-width: 24rem;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1376,6 +1388,12 @@ video {
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .md\:space-y-\[96px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(96px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(96px * var(--tw-space-y-reverse));
   }
 
   .md\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
@@ -1403,27 +1421,41 @@ video {
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
-
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:visible {
+    visibility: visible;
+  }
+
+  .lg\:relative {
+    position: relative;
+  }
+
   .lg\:mx-\[50px\] {
     margin-left: 50px;
     margin-right: 50px;
   }
 
-  .lg\:mx-\[25px\] {
-    margin-left: 25px;
-    margin-right: 25px;
-  }
-
   .lg\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:h-\[600px\] {
@@ -1458,20 +1490,46 @@ video {
     max-width: 650px;
   }
 
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .lg\:-translate-y-0 {
+    --tw-translate-y: -0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .lg\:flex-row {
     flex-direction: row;
   }
 
+  .lg\:items-center {
+    align-items: center;
+  }
+
   .lg\:justify-start {
     justify-content: flex-start;
   }
 
+  .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .lg\:space-x-\[30px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(30px * var(--tw-space-x-reverse));
+    margin-left: calc(30px * calc(1 - var(--tw-space-x-reverse)));
+  }
+
   .lg\:rounded-full {
     border-radius: 9999px;
+  }
+
+  .lg\:bg-inherit {
+    background-color: inherit;
+  }
+
+  .lg\:bg-LightBlue {
+    --tw-bg-opacity: 1;
+    background-color: rgb(19 93 255 / var(--tw-bg-opacity));
   }
 
   .lg\:px-\[50px\] {
@@ -1483,14 +1541,29 @@ video {
     text-align: left;
   }
 
-  .lg\:text-6xl {
-    font-size: 3.75rem;
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
     line-height: 1;
   }
 
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-black {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
+  }
+
+  .lg\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
   .lg\:opacity-0 {
