--- a/output.css
+++ b/output.css
@@ -728,6 +728,10 @@ video {
   height: 2.5rem;
 }
 
+.h-\[250px\] {
+  height: 250px;
+}
+
 .w-full {
   width: 100%;
 }
@@ -756,6 +760,14 @@ video {
 
 .w-\[305px\] {
   width: 305px;
+}
+
+.w-\[250px\] {
+  width: 250px;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .max-w-\[300px\] {
@@ -1043,6 +1055,14 @@ video {
 
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
 }
 
 .text-left {
@@ -1401,6 +1421,11 @@ video {
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
